[gd_scene load_steps=3 format=3 uid="uid://s2dhd4ur5lvf"]

[ext_resource type="Script" uid="uid://ubnf2rodb5m" path="res://scripts/menus/settings_menu/settings_menu.gd" id="1_r2f7a"]
[ext_resource type="Theme" uid="uid://t3vl80sdwm8r" path="res://themes/main_menu.tres" id="1_twvox"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r2f7a")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.772549)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.5
offset_top = -24.0
offset_right = 84.5
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LabelSound" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_twvox")
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -33.0
max_value = 15.0
step = 0.1

[node name="LabelSound2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_twvox")
text = "Sound"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider2" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -33.0
max_value = 15.0
step = 0.1

[node name="ButtonBack" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_twvox")
text = "Voltar"

[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HSlider2" to="." method="_on_h_slider_2_value_changed"]
[connection signal="pressed" from="VBoxContainer/ButtonBack" to="." method="_on_button_back_pressed"]
